Made head utils more modern (no more reflection)